[metadata]
name = selenium_helper
version = 1.0
author = Bhavin Patel
author_email = bhavinpatel99987@gmail.com
description = A helper utility for Selenium WebDriver automation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bhavin3206/selenium_helper
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    selenium
